--- a/musictxt/ponds/templates/ponds/home.html
+++ b/musictxt/ponds/templates/ponds/home.html
@@ -60,7 +60,7 @@
           <div class="col-2">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
-              Upload
+              Upload1
             </button>
 
             <!-- Modal -->
